# nuitInfo2023

./: .env  .env.bak  .env.template  .gitignore  Cargo.toml  README  README.md  docker-compose.yml  main.py  nginx.conf  package-lock.json
api/: Cargo.toml  Rocket.toml  api.js  api.ts  api.ts.doc  api.ts.md  api.ts.save  api_routes.md  api_specifications.md  bun.lockb  lib.ts  package-lock.json  package.json
api/src/: libs.rs  main.rs  models.rs
api/static/: add_team.html  add_user.html
certifs/: cert.pem  certif.pem  certif_key.pem  chain.pem  fullchain.pem  privkey.pem
db/: Dockerfile  docker-compose.yml  mongodb.conf
db/.mongodb/mongosh/: 6521062a02798bf233c5d309_log  65210635c52f64741da07384_log  65210638bcff6b0359da9db3_log  am-6521062a02798bf233c5d308.json  config
db/schemas/: Team.json  User.json
front/: .gitignore  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
front/src/: app.html
front/src/lib/: member.ts  processCommand.ts  signUpMember.svelte  smoothScroll.ts  token.ts  utils.ts
front/src/lib/components/ui/accordion/: accordion-trigger.svelte
front/src/lib/components/ui/checkbox/: checkbox.svelte
front/src/routes/: +layout.svelte  +page.svelte
front/src/routes/admin/: +page.svelte
front/src/routes/inscriptions/: +layout.svelte  +page.svelte
front/src/routes/inscriptions/merci/: +page.svelte
front/src/routes/inscriptions/merci-solo/: +page.svelte
front/src/routes/mon-equipe/: +page.svelte
front/src/routes/se-connecter/: +page.svelte
src/: libs.rs  main.rs  models.rs  sql.rs
(+3 files in other folders)
