[package]
name = "backend_nuit_info2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.4.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
passwords = "3.1.16"
chrono = "0.4.31"
mongodb = "2.7.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.188"
